--- a/css/style.default.css
+++ b/css/style.default.css
@@ -157,6 +157,9 @@ p.social a.instagram {
 p.social a.email {
   background-color: #666;
 }
+p.social a.linkedin {
+  background-color: #999;
+}
 .copyright {
   margin-top: 40px;
   margin-bottom: 40px;
