--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,10 @@
 /* your styles go here */
-#contact {
+#contact, #portfolio {
     padding: 0 0 150px 0;
 }
 
 @media (max-width: 991px) {
-  #contact {
+  #contact, #portfolio {
     padding: 0 0 60px 0;
   }
 }
